tests/ast/positive/comments.gp
# a comment before main
int main() 
{
   # test comment
   int a;
   a = 2;
   int b;
   string abcd; 
   abcd = "thisisastring"; 
   b = 2;
   return 0; 
}