tests/ast/negative/mistaken_func_call.gp
int main () {
    a = funcCal(int y); 
}